[project]
name = "crystalformer-experimental"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bohr-agent-sdk>=0.1.100",
    "bohrium-sdk>=0.13.0",
    "deepmd-kit>=3.1.0",
    "dm-haiku>=0.0.14",
    "fastmcp>=2.11.0",
    "flax>=0.10.6",
    "jax[cuda]>=0.5.3,<0.7.0",
    "lmdb>=1.6.2",
    "optax>=0.2.5",
    "pandas>=2.3.0",
    "pymatgen>=2025.6.14",
    "pyxtal>=1.0.9",
    "torch>=2.7.1",
    "torchaudio>=2.7.1",
    "torchvision>=0.22.1"
]

[[tool.uv.index]]
url = "https://mirrors.bfsu.edu.cn/pypi/web/simple/"
default = true
